data/derived/fa15/progs/unify/prog4026.ml.out
Characters 48-58:
  (b', b'=b)), b);;
  ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
